# madd

./: .gitignore  CMakeLists.txt  ChangLog.txt  LICENSE  README.md  config.cmake  config.h.in  madd.h  maddConfig.cmake.in  version.txt
basic/: CMakeLists.txt  basic.h  binary_number.c  byte_reverse.c  cnum.h  constant.c  constant.h  cuda_base.c  cuda_base.cu  cuda_base.cuh  error_info.c  error_info.cpp  file_endian.c  log2_integer.c  madd_print.c  norm.c  test.cmake  time_stamp.c
basic/test/: binary-1-number.c  bit-reverse.c  byte-reverse.c  cnum.c  cuda-base.c  error-info.c  file-endian.c  hash-float.c  log2-1.c  log2-2.c  norm.c  print-constant.c
benchmark/: CMakeLists.txt  fft-cuda.cpp  fft.cpp  linalg-determinant.cpp  linalg-eigen.cpp  linalg-linear-equations.cpp  linalg-matrix-inverse.cpp  rng.cpp  sort.cpp
data_struct/: CMakeLists.txt  Fibonacci_Heap.c  Fibonacci_Heap.h  RB_tree.c  RB_tree.h  binary_search_tree.c  binary_search_tree.h  data_struct.h  linked_list.c  queue.c  singly_linked_list.c  stack.c  test.cmake
data_struct/test/: FibonacciHeap-1.c  FibonacciHeap-2.c  binary-1.c  binary-2.c  binary-3.c  linked-list.c  queue-minimal.c  queue.c  rbtree-1.c  rbtree-2.c  rbtree-3.c  rbtree-deepseek.c  stack.c
doc/: CMakeLists.txt  madd-guide.tex  mkdocs.yml
doc/chap/: basic.tex  rng.tex  sort.tex
doc/docs/: basic-binary.md  basic-cnum.md  basic-constant.md  basic-error-warning.md  basic-intro.md  basic-other.md  fft-dct.md  fft-func.md  fft-intro.md  integrate-Clenshaw-Curtis.md  integrate-Gauss-Legendre.md  integrate-Simpson.md  integrate-intro.md  integrate-trapeze.md  intro-build.md  intro-home.md  intro-include.md  linalg-determinant.md  linalg-eigen.md  linalg-intro.md  linalg-inverse.md  linalg-linear-equation.md  linalg-matrix-multiply.md  linalg-transpose.md  rng-intro.md  sort-binary-search.md  sort-func.md  sort-intro.md  statistics-intro.md  statistics-kahan-sum.md
doc/docs/css/: dark_theme.css
doc/docs/overrides/: main.html
fft/: CMakeLists.txt  dct-weight.c  dct1-naive.c  dct1.c  dct2-base2.c  dct2-naive.c  dct2-radix2.c  dct2.c  dft-naive.c  fft-bluestein.c  fft-error.cu  fft-radix2.c  fft-weight.c  fft.c  fft.cu  fft.cuh  fft.h  idct2-naive.c  idct2.c  test.cmake
fft/test/: dct1.c  dct2.c  fft-bak.c  fft-cuda.c  fft.c
fmin/: CMakeLists.txt  Jacobi-Iteration-Sparse.c  Jacobi-Iteration.c  Newton-Iteration.c  fmin-NM.bak.c  fmin-NM.c  fmin-NM.h  fmin-PSO.c  fmin-SA.c  fmin.h  test.cmake
fmin/test/: fmin-Jacobi-Iteration-Sparse.c  fmin-NM.c  fmin-Newton-Iteration.c  fmin-PSO.c
integrate/: CMakeLists.txt  Int_Simpson.c  int_Clenshaw_Curtis.c  int_Gauss-Laguerre.c  int_gauss_legendre.c  int_trapeze.c  integrate.h  test.cmake
integrate/test/: Clenshaw-Curtis.c  Gauss-Laguerre.c  Gauss-Legendre.c  Simpson.c  trapeze.c
interpolation/: CMakeLists.txt  Lagrange.c  cubic_spline.c  interpolation.h
large_number/: CMakeLists.txt  large_number.h  large_uint.h  large_uint128.c  large_uint256.c  test.cmake
large_number/test/: uint128.c
linalg/: CMakeLists.txt  cublas_error.cu  cusolver_error.cu  determinant.c  determinant.cu  determinant_Bareiss.c  eigen.c  eigen_64.cu  eigen_generalized.c  linalg.cuh  linalg.h  linear_equations.c  linear_equations.cu  linear_equations_64.cu  linear_equations_tridiagonal.c  matrix_inverse.c  matrix_multiply.c  matrix_multiply.cu  matrix_multiply_64.cu  matrix_multiply_naive.c  matrix_multiply_vector.c  matrix_transpose.c  matrix_transpose_inplace.c  matrix_transpose_outplace.c  test.cmake
linalg/test/: determinant-cuda.c  determinant.c  eigen-cuda.c  eigen-generalized.c  eigen.c  linear-equations-cuda.c  linear-equations-cuda64.c  linear-equations.c  matrix-inverse.c  matrix-multiply.c
polynomial/: CMakeLists.txt  poly1d.c  poly1d.h  polynomial.h  test.cmake
polynomial/test/: poly1d-deriv-Norder.c  poly1d-deriv1.c  poly1d-deriv2.c  poly1d-integrate.c  poly1d-nintegrate.c  poly1d.c
rng/: CMakeLists.txt  rng.h  rng_MT.c  rng_MT.h  rng_clib.c  rng_clib.h  rng_param.c  rng_x86.c  rng_x86.h  rng_xorshift1024.h  rng_xorshift1024s.c  rng_xorshift64.c  rng_xorshift64.h  rng_xorshift64s.c  rng_xorwow.c  rng_xorwow.h  rng_xoshiro256.h  rng_xoshiro256p.c  rng_xoshiro256ss.c  test.cmake
rng/test/: RNG-MT.c  RNG-Param.c  RNG-Xorshift1024s.c  RNG-Xorshift64.c  RNG-Xorshift64s.c  RNG-Xorwow.c  RNG-Xoshiro256p.c  RNG-Xoshiro256ss.c  RNG-clib.c  RNG-time-compare.c  RNG-x86.c
sort/: CMakeLists.txt  binary_search.c  binary_search.h  sort.c  sort.h  sort_compare_func.c  sort_counting.c  sort_counting.h  sort_heap.c  sort_insertion.c  sort_insertion.h  sort_key2compare.c  sort_merge.c  sort_merge.h  sort_merge_method.c  sort_quicksort.c  sort_quicksort.h  sort_shell.cpp  test.cmake
sort/test/: .goutputstream-9GM6B3  binary-search-insert.c  binary-search.c  sort-counting.c  sort-heap.c  sort-insertion.c  sort-merge.c  sort-quicksort.c  sort-shell.c  sort-time-compare.c
special_func/: CMakeLists.txt  special_func.h  special_func_Legendre.c  test.cmake
special_func/test/: Legendre.c
statistics/: CMakeLists.txt  kahan_sum.c  linspace.c  statistics.h  test.cmake
statistics/test/: Kahan-summation.c
thread_base/: CMakeLists.txt  cpp_thread.cpp  pthread.c  pthread.cpp  test.cmake  thread_base.h  win_thread.c  win_thread.cpp
thread_base/test/: main-condition-variable.c  main-create.c  main-mutex.c  main-nthread.c  main-rwlock.c
